--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
   
     
-  "test": "echo \"Error: no test specified\" && exit 1"
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "dev": "npx nodemon app.js list"
   
   },
   
@@ -17,6 +18,9 @@
   
     
   "chalk": "^4.1.0",
+  
+    
+  "nodemon": "^3.1.0",
   
     
   "validator": "^13.11.0",
